Fix stylist layout bug

--- a/public/css/stylist/clients.css
+++ b/public/css/stylist/clients.css
@@ -13,4 +13,5 @@
 
 .color-client {
     color: #02BFAF;
+    display: block;
 }
